WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263906
[WebGPU] setDepthBias: is never called, depth bias and related functions are not implemented
https://bugs.webkit.org/show_bug.cgi?id=263906
Summary
[WebGPU] setDepthBias: is never called, depth bias and related functions are ...
Mike Wyrzykowski
Reported
2023-10-30 11:15:50 PDT
[WebGPU] setDepthBias: is never called, depth bias and related functions are not implemented
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-30 11:16:06 PDT
<
rdar://problem/117696050
>
Mike Wyrzykowski
Comment 2
2023-10-30 11:39:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19729
EWS
Comment 3
2023-10-30 21:48:20 PDT
Committed
269995@main
(7111a438f7c7): <
https://commits.webkit.org/269995@main
> Reviewed commits have been landed. Closing PR #19729 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug