[WebGPU] setDepthBias: is never called, depth bias and related functions are not implemented https://bugs.webkit.org/show_bug.cgi?id=263906 <rdar://problem/117696050>

Reviewed by Dan Glastonbury.

Call setDepthBias for regular passes and ICBs and update the test expectations.

* LayoutTests/http/tests/webgpu/webgpu/api/operation/rendering/depth_bias-expected.txt:
* Source/WebCore/Modules/WebGPU/GPUDepthStencilState.h:
(WebCore::GPUDepthStencilState::convertToBacking const):
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUDeviceImpl.cpp:
(WebCore::WebGPU::convertToBacking):
* Source/WebGPU/WebGPU/RenderBundleEncoder.h:
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(-[RenderBundleICBWithResources initWithICB:pipelineState:depthStencilState:cullMode:frontFace:depthClipMode:depthBias:depthBiasSlopeScale:depthBiasClamp:]):
(WebGPU::makeRenderBundleICBWithResources):
(WebGPU::RenderBundleEncoder::endCurrentICB):
(WebGPU::icbNeedsToBeSplit):
(WebGPU::RenderBundleEncoder::setPipeline):
(-[RenderBundleICBWithResources initWithICB:pipelineState:depthStencilState:cullMode:frontFace:depthClipMode:]): Deleted.
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executeBundles):
(WebGPU::RenderPassEncoder::setPipeline):
* Source/WebGPU/WebGPU/RenderPipeline.h:
(WebGPU::RenderPipeline::create):
(WebGPU::RenderPipeline::depthBias const):
(WebGPU::RenderPipeline::depthBiasSlopeScale const):
(WebGPU::RenderPipeline::depthBiasClamp const):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::createRenderPipeline):
(WebGPU::RenderPipeline::RenderPipeline):

Canonical link: https://commits.webkit.org/269995@main